DB-9331 Fix spotbugs